File Server - stage 4/4: Save anything